[tool.poetry]
name = "Mosyagin_PyPrj"
version = "0.1.0"
description = ""
authors = ["Anton Mosyagin <anton@mosyagin.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.13.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.black]
exclude = '''
(
    /(
        |\.git
        |\.mypy_cache
        |\.venv
    )/
)
'''

[tool.mypy]
exclude = 'venv'
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true

[tool.isort]
line_length = 119
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
